--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:sPyzZibVyFfQQWQILuelce+zaNXRGIQ1NeIChbWI0IM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=vuetify
+
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,12 +30,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=valtersahakyan4@gmail.com
+MAIL_PASSWORD=vhqqqdqdqdsjylaa
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=valtersahakyan4@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
